src/objects/Apttus_Billing__InvoiceRun__c.object
<CustomObject>
    <description>Represents an Immediate or Scheduled invoice creation batch job.</description>
    <fields>
        <fullName>Apttus_Billing__AutoApplyCreditMemoOrder__c</fullName>
        <description>The ordering precedence to use when automatically applying Credit Memos to Invoice.</description>
        <inlineHelpText>The ordering precedence to use when automatically applying Credit Memos to Invoice.</inlineHelpText>
        <label>Auto Apply Credit Memo Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oldest Invoices 1st</fullName>
                    <default>true</default>
                    <label>Oldest Invoices 1st</label>
                </value>
                <value>
                    <fullName>Most Recent Invoices 1st</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AutoApplyCreditMemo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to control whether or not Credit Memos will be automatically applied
to Invoices generated by this Invoice Run.</description>
        <inlineHelpText>Option to control whether or not Credit Memos will be automatically applied
to Invoices.</inlineHelpText>
        <label>Auto Apply Credit Memo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AutoApproveAmount__c</fullName>
        <description>Auto approve invoices based on the amount specified here.</description>
        <inlineHelpText>Auto approve invoices based on the amount specified here.</inlineHelpText>
        <label>Auto Approve Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AutoApproveCreditMemos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approve credit memos automatically if checked.</description>
        <inlineHelpText>Approve credit memos automatically if checked.</inlineHelpText>
        <label>Auto Approve Credit Memos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AutoApproveInvoices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approve invoices automatically if checked based on the condition. Approve all if there is no condition.</description>
        <inlineHelpText>Approve invoices automatically if checked based on the condition. Approve all if there is no condition.</inlineHelpText>
        <label>Auto Approve Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AutoApproveOperator__c</fullName>
        <description>Comparison operator to evaluate auto approve of invoices.</description>
        <inlineHelpText>Comparison operator to evaluate auto approve of invoices.</inlineHelpText>
        <label>Auto Approve Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than</fullName>
                </value>
                <value>
                    <fullName>Less than or equal to</fullName>
                </value>
                <value>
                    <fullName>Greater than</fullName>
                </value>
                <value>
                    <fullName>Greater than or equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AutoSendCreditMemoEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to send credit memo email automatically (as part of the invoice run) if it is approved.</description>
        <inlineHelpText>Option to send credit memo email automatically (as part of the invoice run) if it is approved.</inlineHelpText>
        <label>Auto Send Credit Memo Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AutoSendInvoiceEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to send invoice email automatically as part of the invoice run.</description>
        <inlineHelpText>Option to send invoice email automatically as part of the invoice run.</inlineHelpText>
        <label>Auto Send Invoice Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Category__c</fullName>
        <description>Custom Option Category. Can be used by the Invoice Filter callback to determine the context of a given Invoice Run.</description>
        <inlineHelpText>Custom Option Category. Can be used by the Invoice Filter callback to determine the context of a given Invoice Run.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CreditMemoCreationOption__c</fullName>
        <description>The various ways to create Credit Memos during an Invoice Run.</description>
        <inlineHelpText>The various ways to create Credit Memos during an Invoice Run.</inlineHelpText>
        <label>Credit Memo Creation Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Credit Memo for Negative Invoice</fullName>
                </value>
                <value>
                    <fullName>Separate Credit Memo for each Negative Schedule</fullName>
                </value>
                <value>
                    <fullName>Single Credit Memo for all Negative Schedules per Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CreditMemoOverrideTemplate__c</fullName>
        <description>An optional name of the Template to use when rendering a Credit Memo.</description>
        <inlineHelpText>An optional name of the Template to use when rendering a Credit Memo.</inlineHelpText>
        <label>Credit Memo Override Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FilterCriteria__c</fullName>
        <description>Holds JSON representation of the account selection criteria for an invoice run.</description>
        <inlineHelpText>Holds JSON representation of the account selection criteria for an invoice run.</inlineHelpText>
        <label>Filter Criteria</label>
        <length>12500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceDateOffset__c</fullName>
        <description>Number of days to add to the date of scheduled run</description>
        <inlineHelpText>Number of days to add to the date of scheduled run</inlineHelpText>
        <label>Invoice Date Offset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-6</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceDateType__c</fullName>
        <description>The mechanism to obtain the Invoice Date.</description>
        <inlineHelpText>The mechanism to obtain the Invoice Date.</inlineHelpText>
        <label>Invoice Date Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Defined</fullName>
                    <default>true</default>
                    <label>User Defined</label>
                </value>
                <value>
                    <fullName>Ready for Invoice Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceDate__c</fullName>
        <description>The date stamped on the invoice.</description>
        <inlineHelpText>The date stamped on the invoice.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceDayMonthOption__c</fullName>
        <description>Helps in deriving an invoice date for a scheduled invoice run.</description>
        <inlineHelpText>Helps in deriving an invoice date for a scheduled invoice run.</inlineHelpText>
        <label>Invoice Day Month Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Next</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__MonthlyDate__c</fullName>
        <description>Represents the days of a month.</description>
        <inlineHelpText>Represents the days of a month.</inlineHelpText>
        <label>Monthly Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>6th</fullName>
                </value>
                <value>
                    <fullName>7th</fullName>
                </value>
                <value>
                    <fullName>8th</fullName>
                </value>
                <value>
                    <fullName>9th</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>11th</fullName>
                </value>
                <value>
                    <fullName>12th</fullName>
                </value>
                <value>
                    <fullName>13th</fullName>
                </value>
                <value>
                    <fullName>14th</fullName>
                </value>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>16th</fullName>
                </value>
                <value>
                    <fullName>17th</fullName>
                </value>
                <value>
                    <fullName>18th</fullName>
                </value>
                <value>
                    <fullName>19th</fullName>
                </value>
                <value>
                    <fullName>20th</fullName>
                </value>
                <value>
                    <fullName>21st</fullName>
                </value>
                <value>
                    <fullName>22nd</fullName>
                </value>
                <value>
                    <fullName>23rd</fullName>
                </value>
                <value>
                    <fullName>24th</fullName>
                </value>
                <value>
                    <fullName>25th</fullName>
                </value>
                <value>
                    <fullName>26th</fullName>
                </value>
                <value>
                    <fullName>27th</fullName>
                </value>
                <value>
                    <fullName>28th</fullName>
                </value>
                <value>
                    <fullName>29th</fullName>
                </value>
                <value>
                    <fullName>30th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__MonthlyInvoiceDay__c</fullName>
        <description>Helps in deriving the invoice date for scheduled invoice runs</description>
        <inlineHelpText>Helps in deriving the invoice date for scheduled invoice runs</inlineHelpText>
        <label>Monthly Invoice Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                </value>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>6th</fullName>
                </value>
                <value>
                    <fullName>7th</fullName>
                </value>
                <value>
                    <fullName>8th</fullName>
                </value>
                <value>
                    <fullName>9th</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>11th</fullName>
                </value>
                <value>
                    <fullName>12th</fullName>
                </value>
                <value>
                    <fullName>13th</fullName>
                </value>
                <value>
                    <fullName>14th</fullName>
                </value>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>16th</fullName>
                </value>
                <value>
                    <fullName>17th</fullName>
                </value>
                <value>
                    <fullName>18th</fullName>
                </value>
                <value>
                    <fullName>19th</fullName>
                </value>
                <value>
                    <fullName>20th</fullName>
                </value>
                <value>
                    <fullName>21st</fullName>
                </value>
                <value>
                    <fullName>22nd</fullName>
                </value>
                <value>
                    <fullName>23rd</fullName>
                </value>
                <value>
                    <fullName>24th</fullName>
                </value>
                <value>
                    <fullName>25th</fullName>
                </value>
                <value>
                    <fullName>26th</fullName>
                </value>
                <value>
                    <fullName>27th</fullName>
                </value>
                <value>
                    <fullName>28th</fullName>
                </value>
                <value>
                    <fullName>29th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__MonthlyProcessthruDay__c</fullName>
        <description>Helps in deriving Process thru date for a scheduled invoice run.</description>
        <inlineHelpText>Helps in deriving Process thru date for a scheduled invoice run.</inlineHelpText>
        <label>Monthly Process thru Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                </value>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>6th</fullName>
                </value>
                <value>
                    <fullName>7th</fullName>
                </value>
                <value>
                    <fullName>8th</fullName>
                </value>
                <value>
                    <fullName>9th</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>11th</fullName>
                </value>
                <value>
                    <fullName>12th</fullName>
                </value>
                <value>
                    <fullName>13th</fullName>
                </value>
                <value>
                    <fullName>14th</fullName>
                </value>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>16th</fullName>
                </value>
                <value>
                    <fullName>17th</fullName>
                </value>
                <value>
                    <fullName>18th</fullName>
                </value>
                <value>
                    <fullName>19th</fullName>
                </value>
                <value>
                    <fullName>20th</fullName>
                </value>
                <value>
                    <fullName>21st</fullName>
                </value>
                <value>
                    <fullName>22nd</fullName>
                </value>
                <value>
                    <fullName>23rd</fullName>
                </value>
                <value>
                    <fullName>24th</fullName>
                </value>
                <value>
                    <fullName>25th</fullName>
                </value>
                <value>
                    <fullName>26th</fullName>
                </value>
                <value>
                    <fullName>27th</fullName>
                </value>
                <value>
                    <fullName>28th</fullName>
                </value>
                <value>
                    <fullName>29th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__MonthlyWeekDay__c</fullName>
        <description>Holds the names of week days.</description>
        <inlineHelpText>Holds the names of week days.</inlineHelpText>
        <label>Monthly Week Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__MonthlyWeek__c</fullName>
        <description>Represents the week numbers of a month.</description>
        <inlineHelpText>Represents the week numbers of a month.</inlineHelpText>
        <label>Monthly Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>the 1st</fullName>
                </value>
                <value>
                    <fullName>the 2nd</fullName>
                </value>
                <value>
                    <fullName>the 3rd</fullName>
                </value>
                <value>
                    <fullName>the 4th</fullName>
                </value>
                <value>
                    <fullName>the last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__OverrideTemplate__c</fullName>
        <description>An optional name of the Invoice Template to use when rendering the Invoice.</description>
        <inlineHelpText>An optional name of the Invoice Template to use when rendering the Invoice.</inlineHelpText>
        <label>Invoice Override Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PeriodEndDate__c</fullName>
        <description>The end date when the scheduled job will stop running.</description>
        <inlineHelpText>The end date when the scheduled job will stop running.</inlineHelpText>
        <label>Schedule Run To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PeriodStartDate__c</fullName>
        <description>The start date when the scheduled job will start running.</description>
        <inlineHelpText>The start date when the scheduled job will start running.</inlineHelpText>
        <label>Schedule Run From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PreferredStartHour__c</fullName>
        <description>The preferred hour of the day when the scheduled job will be added to the job queue.</description>
        <inlineHelpText>The preferred hour of the day when the scheduled job will be added to the job queue.</inlineHelpText>
        <label>Preferred Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12 AM</fullName>
                </value>
                <value>
                    <fullName>1 AM</fullName>
                </value>
                <value>
                    <fullName>2 AM</fullName>
                </value>
                <value>
                    <fullName>3 AM</fullName>
                </value>
                <value>
                    <fullName>4 AM</fullName>
                </value>
                <value>
                    <fullName>5 AM</fullName>
                </value>
                <value>
                    <fullName>6 AM</fullName>
                </value>
                <value>
                    <fullName>7 AM</fullName>
                </value>
                <value>
                    <fullName>8 AM</fullName>
                </value>
                <value>
                    <fullName>9 AM</fullName>
                </value>
                <value>
                    <fullName>10 AM</fullName>
                </value>
                <value>
                    <fullName>11 AM</fullName>
                </value>
                <value>
                    <fullName>12 PM</fullName>
                </value>
                <value>
                    <fullName>1 PM</fullName>
                </value>
                <value>
                    <fullName>2 PM</fullName>
                </value>
                <value>
                    <fullName>3 PM</fullName>
                </value>
                <value>
                    <fullName>4 PM</fullName>
                </value>
                <value>
                    <fullName>5 PM</fullName>
                </value>
                <value>
                    <fullName>6 PM</fullName>
                </value>
                <value>
                    <fullName>7 PM</fullName>
                </value>
                <value>
                    <fullName>8 PM</fullName>
                </value>
                <value>
                    <fullName>9 PM</fullName>
                </value>
                <value>
                    <fullName>10 PM</fullName>
                </value>
                <value>
                    <fullName>11 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PreferredStartMinute__c</fullName>
        <description>The preferred minute (15 min interval) of the day when the scheduled job will be added to the job queue.</description>
        <inlineHelpText>The preferred minute (15 min interval) of the day when the scheduled job will be added to the job queue.</inlineHelpText>
        <label>Preferred Start Minute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ProcessthruDateOffset__c</fullName>
        <description>Number of days to add to the date of scheduled run</description>
        <inlineHelpText>Number of days to add to the date of scheduled run</inlineHelpText>
        <label>Process thru Date Offset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-6</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ProcessthruDate__c</fullName>
        <description>The date used to collect relevant pending billing schedules up to (including) this date.</description>
        <inlineHelpText>The date used to collect relevant pending billing schedules up to (including) this date.</inlineHelpText>
        <label>Process thru Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ProcessthruDayMonthOption__c</fullName>
        <description>Helps in deriving Process thru date for a scheduled invoice run.</description>
        <inlineHelpText>Helps in deriving Process thru date for a scheduled invoice run.</inlineHelpText>
        <label>Process thru Day Month Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Next</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__RunType__c</fullName>
        <description>The type of an invoice run.</description>
        <inlineHelpText>The type of an invoice run.</inlineHelpText>
        <label>Run Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ScheduleType__c</fullName>
        <description>The type of the schedule.</description>
        <inlineHelpText>The type of the schedule.</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly by date</fullName>
                </value>
                <value>
                    <fullName>Monthly by day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ScheduledJobId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The job ID of a scheduled job.</description>
        <inlineHelpText>The job ID of a scheduled job.</inlineHelpText>
        <label>Scheduled Job Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SplitInvoicesByOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create separate invoice for each order if checked.</description>
        <inlineHelpText>Create separate invoice for each order if checked.</inlineHelpText>
        <label>Split Invoices By Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SubCategory__c</fullName>
        <description>Custom Option Sub-category. Can be used by the Invoice Filter callback to determine the context of a given Invoice Run.</description>
        <inlineHelpText>Custom Option Sub-category. Can be used by the Invoice Filter callback to determine the context of a given Invoice Run.</inlineHelpText>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SuppressInvoicesAmount__c</fullName>
        <description>Suppress creation of invoices based on the amount specified here.</description>
        <inlineHelpText>Suppress creation of invoices based on the amount specified here.</inlineHelpText>
        <label>Suppress Invoices Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SuppressInvoicesOperator__c</fullName>
        <description>Comparison operator to use to suppress creation of invoices.</description>
        <inlineHelpText>Comparison operator to use to suppress creation of invoices.</inlineHelpText>
        <label>Suppress Invoices Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than</fullName>
                </value>
                <value>
                    <fullName>Less than or equal to</fullName>
                </value>
                <value>
                    <fullName>Equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__WeekDay__c</fullName>
        <description>Holds the names of week days.</description>
        <inlineHelpText>Holds the names of week days.</inlineHelpText>
        <label>Week Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>